[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI_Components/New.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Crushed-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2.46229, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.556863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.277392, 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 274, 1100 ), Vector2( 274, 77.55 ), Vector2( 274, 106 ) ]
}

[node name="New" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -446.0
margin_top = 284.0
margin_right = 446.0
margin_bottom = 1028.0

[node name="cont" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.5
margin_top = -331.0
margin_right = 412.5
margin_bottom = 331.0

[node name="sep5" type="HSeparator" parent="Panel/cont"]
margin_right = 825.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="title" type="Label" parent="Panel/cont"]
margin_top = 34.0
margin_right = 825.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 4 )
text = "CREATE_PLAN"
align = 1

[node name="sep" type="HSeparator" parent="Panel/cont"]
margin_top = 73.0
margin_right = 825.0
margin_bottom = 103.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="name" type="LineEdit" parent="Panel/cont"]
margin_top = 107.0
margin_right = 825.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 40 )
placeholder_text = "PLAN_NAME"
caret_blink = true

[node name="sep2" type="HSeparator" parent="Panel/cont"]
margin_top = 151.0
margin_right = 825.0
margin_bottom = 181.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="desc" type="LineEdit" parent="Panel/cont"]
margin_top = 185.0
margin_right = 825.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 40 )
placeholder_text = "PLAN_DESC"
caret_blink = true

[node name="sep3" type="HSeparator" parent="Panel/cont"]
margin_top = 229.0
margin_right = 825.0
margin_bottom = 259.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 30

[node name="path" type="HBoxContainer" parent="Panel/cont"]
margin_top = 263.0
margin_right = 825.0
margin_bottom = 303.0

[node name="line" type="LineEdit" parent="Panel/cont/path"]
margin_right = 697.0
margin_bottom = 40.0
size_flags_horizontal = 3
placeholder_text = "SAVE_PATH"
caret_blink = true

[node name="sep2" type="VSeparator" parent="Panel/cont/path"]
margin_left = 701.0
margin_right = 721.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 20

[node name="browse" type="Button" parent="Panel/cont/path"]
margin_left = 725.0
margin_right = 825.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
text = "BROWSE"

[node name="sep4" type="HSeparator" parent="Panel/cont"]
margin_top = 307.0
margin_right = 825.0
margin_bottom = 367.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 60

[node name="buttons" type="HBoxContainer" parent="Panel/cont"]
margin_top = 371.0
margin_right = 825.0
margin_bottom = 411.0
alignment = 1

[node name="cancel" type="Button" parent="Panel/cont/buttons"]
margin_left = 188.0
margin_right = 308.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "CANCEL"

[node name="sep" type="VSeparator" parent="Panel/cont/buttons"]
margin_left = 312.0
margin_right = 332.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 20

[node name="ok" type="Button" parent="Panel/cont/buttons"]
margin_left = 336.0
margin_right = 636.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
shortcut_in_tooltip = false
text = "CREATE"

[node name="anim" type="AnimationPlayer" parent="."]
anims/pop = SubResource( 3 )

[node name="file" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -303.5
margin_right = 485.0
margin_bottom = 303.5
window_title = ""
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.plan ; Planner Projects" )
current_dir = "D:/Nora/Documents/!LUNEAL LABS/Planner"
current_path = "D:/Nora/Documents/!LUNEAL LABS/Planner/"
[connection signal="pressed" from="Panel/cont/path/browse" to="." method="_on_browse_pressed"]
[connection signal="pressed" from="Panel/cont/buttons/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Panel/cont/buttons/ok" to="." method="_on_save_pressed"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="file_selected" from="file" to="." method="_on_file_file_selected"]
